force-app/main/default/objects/Lead/fields/Day_3_Email__c.field-meta.xml
<CustomField>
    <fullName>Day_3_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has the Day 3 follow up email been sent?</description>
    <inlineHelpText>Status will change from a flow.</inlineHelpText>
    <label>Day 3 Email</label>
    <type>Checkbox</type>
</CustomField>