force-app/main/default/objects/Lead/fields/End_Email_Campaign__c.field-meta.xml
<CustomField>
    <fullName>End_Email_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ends Lead Email Campaign. Select if the Lead is to be converted, or if the Lead has expressed they wish to no longer receive emails related to this campaign.</description>
    <inlineHelpText>Select to stop Email Campaign. Select prior to converting Lead.</inlineHelpText>
    <label>End Email Campaign?</label>
    <type>Checkbox</type>
</CustomField>