force-app/main/default/objects/Lead/fields/Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Date__c</fullName>
    <description>Follow Up Date and Time for initial questions based on call</description>
    <label>Follow Up Date</label>
    <type>DateTime</type>
</CustomField>