force-app/main/default/objects/Lead/fields/Initial_Customer_Questions__c.field-meta.xml
<CustomField>
    <fullName>Initial_Customer_Questions__c</fullName>
    <label>Initial Customer Questions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>