force-app/main/default/objects/Lead/recordTypes/Woolly_Cloud_Farm_Lead_Process.recordType-meta.xml
<RecordType>
    <fullName>Woolly_Cloud_Farm_Lead_Process</fullName>
    <active>true</active>
    <businessProcess>Woolly Cloud Farm Lead Process</businessProcess>
    <label>Woolly Cloud Farm Lead Process</label>
</RecordType>