force-app/main/default/objects/Lead/listViews/SDR_Lead_List.listView-meta.xml
<ListView>
    <fullName>SDR_Lead_List</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Priority__c</columns>
    <filterScope>Mine</filterScope>
    <label>SDR Lead List</label>
</ListView>