force-app/main/default/objects/Lead/listViews/SDR_Team_Lead.listView-meta.xml
<ListView>
    <fullName>SDR_Team_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>SDR Team</label>
    <queue>SDR_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>